Melhora significativa na responsividade e visual do site
Foi adicionado um @media para auxiliar na responsividade do site para mobile

--- a/index.html
+++ b/index.html
@@ -49,7 +49,18 @@
                     <img src="img/google-pq.png" alt="logo google">
                     <h4>Entrar com o google!</h4>
                 </div>
+
+                <div class="redefinir">
+                    <h4>Esqueceu sua senha?</h4>
+                    <a class
+                     href="#">Click aqui</a>
+                </div>
            </div>
+
+           <div class="cadastro2">
+            <h4>Cadastre-se já</h4>
+            <button>click aqui!</button>
+        </div>
         </div>
     </div>
 </body>
