--- a/login.html
+++ b/login.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book Time</title>
+    <title>Make Note</title>
     <link rel="shortcut icon" href="img/historia.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     
@@ -13,7 +13,7 @@
 
         <div class="left_login">
             <div class="logo_slogan">
-                <h1 class="logo">Book Time</h1>
+                <h1 class="logo">Make Note</h1>
                 <h4 class="subtitle">Seu Tempo, Seu Jeito - Agende Já!</h4>
 
                 <img class="book_time" src="img/Notebook-amico.svg" alt="mulher agendando horario">
