--- a/index.html
+++ b/index.html
@@ -5,9 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Make Note</title>
     <link rel="shortcut icon" href="img/historia.png" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="style_index.css">
 </head>
 <body>
-    
+    <div class="header">
+        <div class="cabecalho"></div>
+        <div class="pesquisa">
+
+            <span class="material-symbols-outlined">
+                search
+            </span>
+
+            <input type="text" placeholder="pesquise por servicos ou empresas  ">
+            <label for=""></label>
+
+        </div>
+        <div class="imagem"></div>
+    </div>
+
+    <div class="main"></div>
 </body>
 </html>
