--- a/index.html
+++ b/index.html
@@ -31,8 +31,71 @@
         </div>
     
         <div class="main">
-            <div class="loja">
-    
+            <div class="loja1">
+                <img  class="banner" src="img/banner.png" alt="banner da loja">
+                <div class="text">
+                    <h1 claas="nomeLoja">Parpar</h1>
+                    <h3 class="endereco">Santo antônio de Jeus, Urbis 4,<br> Via coletora A, Nº 5</h3>
+                </div>
+            </div>
+
+            <div class="loja1">
+                <img  class="banner" src="img/banner.png" alt="banner da loja">
+                <div class="text">
+                    <h1 claas="nomeLoja">Parpar</h1>
+                    <h3 class="endereco">Santo antônio de Jeus, Urbis 4,<br> Via coletora A, Nº 5</h3>
+                </div>
+            </div>
+            <div class="loja1">
+                <img  class="banner" src="img/banner.png" alt="banner da loja">
+                <div class="text">
+                    <h1 claas="nomeLoja">Parpar</h1>
+                    <h3 class="endereco">Santo antônio de Jeus, Urbis 4,<br> Via coletora A, Nº 5</h3>
+                </div>
+            </div>
+
+            <div class="loja1">
+                <img  class="banner" src="img/banner.png" alt="banner da loja">
+                <div class="text">
+                    <h1 claas="nomeLoja">Parpar</h1>
+                    <h3 class="endereco">Santo antônio de Jeus, Urbis 4,<br> Via coletora A, Nº 5</h3>
+                </div>
+            </div>
+
+            <div class="loja1">
+                <img  class="banner" src="img/banner.png" alt="banner da loja">
+                <div class="text">
+                    <h1 claas="nomeLoja">Parpar</h1>
+                    <h3 class="endereco">Santo antônio de Jeus, Urbis 4,<br> Via coletora A, Nº 5</h3>
+                </div>
+            </div>
+            <div class="loja1">
+                <img  class="banner" src="img/banner.png" alt="banner da loja">
+                <div class="text">
+                    <h1 claas="nomeLoja">Parpar</h1>
+                    <h3 class="endereco">Santo antônio de Jeus, Urbis 4,<br> Via coletora A, Nº 5</h3>
+                </div>
+            </div>
+            <div class="loja1">
+                <img  class="banner" src="img/banner.png" alt="banner da loja">
+                <div class="text">
+                    <h1 claas="nomeLoja">Parpar</h1>
+                    <h3 class="endereco">Santo antônio de Jeus, Urbis 4,<br> Via coletora A, Nº 5</h3>
+                </div>
+            </div>
+            <div class="loja1">
+                <img  class="banner" src="img/banner.png" alt="banner da loja">
+                <div class="text">
+                    <h1 claas="nomeLoja">Parpar</h1>
+                    <h3 class="endereco">Santo antônio de Jeus, Urbis 4,<br> Via coletora A, Nº 5</h3>
+                </div>
+            </div>
+            <div class="loja1">
+                <img  class="banner" src="img/banner.png" alt="banner da loja">
+                <div class="text">
+                    <h1 claas="nomeLoja">Parpar</h1>
+                    <h3 class="endereco">Santo antônio de Jeus, Urbis 4,<br> Via coletora A, Nº 5</h3>
+                </div>
             </div>
         </div>
     </div>
